// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Button" renders (dark theme) 1`] = `
<div
  css={[Function]}
>
  <button
    css={[Function]}
  >
    Button
  </button>
</div>
`;

exports[`"Button" renders 1`] = `
<div
  css={[Function]}
>
  <button
    css={[Function]}
  >
    Submit
  </button>
</div>
`;

exports[`"Button" renders as block 1`] = `
<div
  css={[Function]}
>
  <button
    css={[Function]}
  >
    Submit
  </button>
</div>
`;

exports[`"Button" renders in loading state 1`] = `
<div
  css={[Function]}
>
  <button
    css={[Function]}
  >
    <svg
      fill="none"
      height={30}
      strokeWidth="3"
      style={
        {
          "display": "flex",
          "margin": "auto",
        }
      }
      viewBox="0 0 43 43"
      width={30}
    >
      <circle
        cx="21.5"
        cy="21.5"
        r="20"
        stroke="rgba(255, 255, 255, 0.07999999999999996)"
      />
      <circle
        css={
          {
            "animation": "_EMO_animation-146xkpe_@keyframes animation-146xkpe{
    0% {
      stroke-dashoffset: 251.36;
    }
    100% {
      stroke-dashoffset: 0;
    }
  }_EMO_ 2400ms ease-in-out infinite,
              _EMO_animation-siltbl_@keyframes animation-siltbl{
    0% {
      transform: rotate(0);
    }
    100% {
      transform: rotate(360deg);
    }
  }_EMO_ 2400ms linear -1800ms infinite",
            "strokeDasharray": 125.68,
            "transformOrigin": "50% 50%",
          }
        }
        cx="21.5"
        cy="21.5"
        r="20"
        stroke="#fff"
        strokeDasharray={125.68}
        strokeLinecap="round"
      />
    </svg>
  </button>
</div>
`;

exports[`"Button" renders when disabled 1`] = `
<div
  css={[Function]}
>
  <button
    css={[Function]}
    disabled={true}
  >
    Submit
  </button>
</div>
`;
